--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title>404 Error - Appvilla Creative Landing Page HTML Template.</title>
+  <title>404 Tunetalk</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/icons8-phone-64.png" />
 
   <!-- ========================= CSS here ========================= -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
