--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tunetalk</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/icons8-phone-64.png" />
+    <link rel="shortcut icon img-fluid" type="image/x-icon" href="assets/images/icons8-phone-64.png" />
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -41,7 +41,7 @@
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logo/logo-rs-crop.png" alt="Logo">
+                                <img class="img-fluid" src="assets/images/logo/logo-rs-crop.png" alt="Logo">
                             </a>
                             <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -153,9 +153,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 center-this">
-                    <div class=" border-box pt-5 ">
+                    <div class=" border-box pt-lg-5 pt-sm-2 ">
                         <h1 class="wow fadeInLeft font-phone" data-wow-delay=".4s">24/7 Customer Service</h1>
-                        <p class="pt-2 ">We are here to help with any queries</p>
+                        <p class="pt-2 ">We are here to help with any queries.Call 0735785785 for any inquiries</p>
                     </div>
 
                 </div>
@@ -193,7 +193,7 @@
                         </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Once the airtime has been loaded to a different number, please contact the network's customer service to request a reversal.Dia1 100 to reach airtel or safaricom customer care.</div>
+                        <div class="accordion-body">Once the airtime has been loaded to a different number, please contact the network's customer service to request a reversal.Dial 100 to reach airtel or safaricom customer care.</div>
                     </div>
                 </div>
                 <div class="accordion-item">
